# feature_store_test

./: Dockerfile  README.md  docker-compose.yml  feast_with_redis_online_store.ipynb  pyproject.toml
feature_repo/: example.py  feature_store.yaml
feature_repo/data/: original_driver_stats.parquet  registry.db  updated_driver_stats.parquet
