[tool.poetry]
name = "feast_test"
version = "0.1.0"
description = ""
authors = ["bang <bac.n@turing.com>"]

[tool.poetry.dependencies]
python = "^3.8"
feast = {extras = ["redis"], version = "^0.19.4"}
Pygments = "^2.11.2"
pandas = "^1.4.2"
jupyter = "^1.0.0"
notebook = "^6.4.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
